# harharhar

./: .gitignore  DESIGN.md  README.md  agent-md-template.txt  package-lock.json  package.json
inject/: intercept.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: browser-capture.json  default.json
src-tauri/permissions/: default.toml  save-capture-data.toml
src-tauri/src/: capture.rs  cleanup.rs  config.rs  digest.rs  endpoints.rs  lib.rs  main.rs
ui/: index.html  main.js  style.css
