[package]
name = "harharhar"
version = "0.1.0"
edition = "2021"

[lib]
name = "harharhar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
url = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
